# VulkanHelloTriangle

./: .gitignore  Build.sh  CMakeLists.txt  GenerateResources.sh  LineCount.sh  README.md  Run.sh  valgrind.supp  vgsupp.txt
Assets/: solidFrag.glsl  solidVert.glsl
Headers/VulkanHelloTriangle/: Application.hpp
Headers/VulkanHelloTriangle/Common/: IDisposable.hpp  Ref.hpp  Resource.hpp
Headers/VulkanHelloTriangle/Graphics/: Vulkan.hpp
Headers/VulkanHelloTriangle/Graphics/Vulkan/: CommandBuffer.hpp  CommandPool.hpp  DebugCallback.hpp  Device.hpp  Framebuffer.hpp  Image.hpp  ImageView.hpp  Instance.hpp  Pipeline.hpp  PipelineLayout.hpp  Queue.hpp  RenderPass.hpp  Semaphore.hpp  ShaderModule.hpp  Surface.hpp  Swapchain.hpp
Headers/VulkanHelloTriangle/Graphics/Vulkan/Common/: AttachmentReference.hpp  AttatchmentDescriptor.hpp  ColorBlendDescriptor.hpp  ColorBlendStateDescriptor.hpp  DepthStencilDescriptor.hpp  DynamicStateDescriptor.hpp  FramebufferDescriptor.hpp  ImageViewDescriptor.hpp  InputAssemblyDescriptor.hpp  MultisampleDescriptor.hpp  PipelineDescriptor.hpp  PipelineLayoutDescriptor.hpp  PresentInfo.hpp  QueueFamilyIndices.hpp  RasterizerStateDescriptor.hpp  Rect2D.hpp  RenderPassBeginInfo.hpp  RenderPassDescriptor.hpp  ShaderStageDescriptor.hpp  ShaderType.hpp  SubmitInfo.hpp  SubpassDescriptor.hpp  SwapchainDescriptor.hpp  SwapchainDetails.hpp  VertexInputDescriptor.hpp  Viewport.hpp  ViewportStateDescriptor.hpp
Source/: Application.cpp  Main.cpp
Source/Common/: IDisposable.cpp
Source/Graphics/Vulkan/: CommandBuffer.cpp  CommandPool.cpp  Device.cpp  Framebuffer.cpp  Image.cpp  ImageView.cpp  Instance.cpp  Pipeline.cpp  PipelineLayout.cpp  Queue.cpp  RenderPass.cpp  Semaphore.cpp  ShaderModule.cpp  Surface.cpp  Swapchain.cpp
